# contextcounter

./: .gitignore  Cargo.toml  README.md
GRCh38_analysis_set/: GCA_000001405.15_GRCh38_no_alt_plus_hs38d1_analysis_set_dinucleotide.tsv  GCA_000001405.15_GRCh38_no_alt_plus_hs38d1_analysis_set_pentanucleotide.tsv  GCA_000001405.15_GRCh38_no_alt_plus_hs38d1_analysis_set_trinucleotide.tsv  README.md
src/: counts.rs  main.rs
testfiles/: test.fasta
